# Call-Me-Maybe

./: Makefile  README.md  call_me_maybe.ipynb  call_me_myabe.ipynb  pyproject.toml  requirements.txt  test.py  timings1.csv  timings10.csv  timings11.csv  timings2.csv  timings3.csv  timings4.csv  timings5.csv  timings6.csv  timings7.csv  timings8.csv  timings9.csv
data/output/: function_calls.json
grammar/: grammar.lark
notebook/: call_me_maybe.ipynb
src/: __main__.py  call_me.py  constrain_decoding.py  get_args.py  parsing.py  tools.py  utils.py
src/model/: call_me.py  constrain_decoding.py  copy.py
src/parsing/: get_args.py  parsing.py  parsing_file.py
src/prompt_examples/: bad_prompts.txt  good_prompts.txt
src/prompt_exaples/: good_prompts.txt
tests/: test_constrained_generation.py
